--- a/Html/Selector-concepts/Tag-Element.html
+++ b/Html/Selector-concepts/Tag-Element.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elememt or tag Selector</title>
-    <link rel="stylesheet" href="Selector-concepts_css/Element-tag-selector.css">
+    <link rel="stylesheet" href="CSS/Tag-Element.css">
 </head>
 <body>
     <!--This is elment or tag selector you can directly styles apply in the tag name
